feat: expose promise that resolves or rejects after initial connection attempt

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@commitlint/cli": "^8.2.0",
     "@jcoreio/commitlint-config": "^1.1.1",
     "@types/chai": "^4.2.6",
+    "@types/chai-as-promised": "^7.1.3",
     "@types/fs-extra": "^8.0.1",
     "@types/lodash": "^4.14.167",
     "@types/mocha": "^5.2.7",
@@ -89,6 +90,7 @@
     "@typescript-eslint/parser": "^2.7.0",
     "babel-plugin-istanbul": "^5.1.0",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "chalk": "^2.4.2",
     "codecov": "^3.1.0",
     "copy": "^0.3.2",
