--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "typescript": "^3.7.2"
   },
   "dependencies": {
+    "p-event": "^4.2.0",
     "p-timeout": "^4.1.0",
     "strict-event-emitter-types": "^2.0.0",
     "verror": "^1.10.0"
